Fixed a type and added a background feature to cities

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -29,7 +29,7 @@
 	<div class="content">
 		<div class="container">
 			<h2>Most Popular Drink for Senators</h2>
-			<h1>Stipper Body Shots</h1>
+			<h1>Stripper Body Shots</h1>
 		</div>
 	</div>
 </section>
