--- a/app/assets/stylesheets/cities.css.scss
+++ b/app/assets/stylesheets/cities.css.scss
@@ -14,7 +14,7 @@ body{
 
 section{
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 	position: relative;
 	text-align: center;
 	&.header{
@@ -41,7 +41,8 @@ section{
 	}
 	.content{
 		position: absolute;
-		top: 30%;
+		top: 50%;
+		margin-top: -8em;
 		width: 100%;
 	}
 }
