--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -1,15 +1,16 @@
 h1{
-	font-size: 6em;
+	font-size: 5.5em;
 	font-family: 'Roboto Condensed', sans-serif;
 	line-height: 1em;
 	&.cheers{
 		font-family: 'Mr De Haviland', cursive;
+		font-size: 6em;
 	}
 }
 
 h2{
 	font-size: 3em;
-	margin-bottom: 0;
+	//margin-bottom: 0;
 	font-family: 'Lobster', cursive;
 	-webkit-margin-before: .25em;
 	-moz-margin-before: .25em;
@@ -23,4 +24,22 @@ p{
 	font-family: 'Roboto Condensed', sans-serif;
 	margin: 0;
 	font-weight: bold;
+}
+
+@media screen and (max-width: 640px){
+	h1{
+		font-size: 4em;
+		line-height: 1em;
+		&.cheers{
+			font-size: 5em;
+		}
+	}
+
+	h2{
+		font-size: 2.5em;
+	}
+
+	p{
+		font-size: 1.5em;
+	}
 }
