--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -26,7 +26,7 @@ p{
 	font-weight: bold;
 }
 
-@media screen and (max-width: 640px){
+@media (max-width: 640px){
 	h1{
 		font-size: 4em;
 		line-height: 1em;
