--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -26,7 +26,7 @@ p{
 	font-weight: bold;
 }
 
-@media (max-width: 640px){
+/*@media (max-width: 640px){
 	h1{
 		font-size: 4em;
 		line-height: 1em;
@@ -42,4 +42,4 @@ p{
 	p{
 		font-size: 1.5em;
 	}
-}
+} */
