--- a/app/assets/stylesheets/cities.css.scss
+++ b/app/assets/stylesheets/cities.css.scss
@@ -8,7 +8,7 @@ body{
 	width: 100%;
 	height: 100%;
 	background: url(image_path('backgrounds/washdc.jpg')) no-repeat center center fixed;
-	-webkit-background-size: cover;
+	--webkit-background-size: cover;
 	background-size: cover;
 }
 
