--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -1,6 +1,8 @@
+body{
+	font-family: 'Roboto Condensed', helvetica, arial, sans-serif;
+}
 h1{
 	font-size: 5.5em;
-	font-family: 'Roboto Condensed', sans-serif;
 	line-height: 1em;
 	&.cheers{
 		font-family: 'Mr De Haviland', cursive;
@@ -21,9 +23,12 @@ h2{
 
 p{
 	font-size: 2em;
-	font-family: 'Roboto Condensed', sans-serif;
 	margin: 0;
 	font-weight: bold;
+}
+
+label{
+	font-size: 1.2em;
 }
 
 /*@media (max-width: 640px){
