--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,16 +1,21 @@
 form{
-	width: 40%;
+	width: 60%;
 	margin: auto;
 	text-align: left;
 }
 
 label{
 	display: block;
+	line-height: 1.5em;
 }
 
-input[type = "text"]{
+input[type = "text"], select {
 	display: block;
 	width: 100%;
 	margin-bottom: 20px;
-	padding: 10px;
+	padding: 5px 0;
+}
+
+input[type = "submit"]{
+	margin: 0 0 0 auto ;
 }
