--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -1,20 +1,18 @@
 body{
-	font-family: 'Roboto Condensed', helvetica, arial, sans-serif;
+	font-family: 'Oswald', helvetica, arial, sans-serif;
 }
 h1{
-	font-size: 5.5em;
-	line-height: 1em;
+	font-size: 4em;
+	line-height: 1.5em;
 	&.cheers{
-		font-family: 'Mr De Haviland', cursive;
-		font-size: 6em;
-		margin-bottom: -8px;
+		font-family: 'Pacifico', cursive;
 	}
 }
 
 h2{
 	font-size: 3em;
 	//margin-bottom: 0;
-	font-family: 'Lobster', cursive;
+	font-weight: bold;
 }
 
 h3{
@@ -35,7 +33,7 @@ h1,h2, h3, h4, h5, h6{
 }
 
 p{
-	font-size: 2em;
+	font-size: 1.5em;
 	margin: 0;
 	font-weight: bold;
 }
