--- a/app/assets/stylesheets/alerts.css.scss
+++ b/app/assets/stylesheets/alerts.css.scss
@@ -1,11 +1,19 @@
 .alert{
   width: 100%;
-  color: rgba(255,255,255,.9);
+  color: rgba(255,255,255, 1);
   text-align: center;
+  padding: 10px 0;
+  position: absolute;
+  -webkit-text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+  -moz-text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+  -ms-text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+  -o-text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+  text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+  top:0;
   &.alert-error{
-    background: rgba(217,89,61,.75);
+    background: rgba(217,89,61,.9);
   }
   &.alert-success{
-    background: rgba(166,255,64,.75)
+    background: rgba(166,255,64,.7)
   }
 }
