--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 </section>
-<section>
+<section class = "fact">
 	<div class="content">
 		<div class="container">
 			<h2>DC Adults Who are Alcohol Dependent</h2>
@@ -17,7 +17,7 @@
 	</div>
 </section>
 
-<section>
+<section class = "fact">
 	<div class="content">
 		<div class="container">
 			<h2>#1 Douchiest Bar in DC</h2>
@@ -26,7 +26,7 @@
 	</div>
 </section>
 
-<section>
+<section class = "fact">
 	<div class="content">
 		<div class="container">
 			<h2>Most Popular Drink for Senators</h2>
