Added an authentication system and admin role

--- a/app/assets/stylesheets/cities.css.scss
+++ b/app/assets/stylesheets/cities.css.scss
@@ -12,6 +12,16 @@ body{
 	background-size: cover;
 }
 
+a{
+	color: #207178;
+	&:hover{
+		color: #174C4F;
+	}
+	&:visited{
+		color: #174C4F;
+	}
+}
+
 section{
 	width: 100%;
 	height: 100%;
