--- a/app/assets/stylesheets/alerts.css.scss
+++ b/app/assets/stylesheets/alerts.css.scss
@@ -11,9 +11,12 @@
   text-shadow: 1px 1px 1px rgba(0,0,0,.8);
   top:0;
   &.alert-error{
-    background: rgba(217,89,61,.9);
+    background: rgba(217,89,61,.8);
   }
   &.alert-success{
-    background: rgba(166,255,64,.7)
+    background: rgba(166,255,64,.8)
+  }
+  &.alert-notice, &.alert-alert{
+    background: rgba(255,255,132,.8)
   }
 }
