--- a/app/views/fun_facts/_fun_fact.html.erb
+++ b/app/views/fun_facts/_fun_fact.html.erb
@@ -1,7 +1,8 @@
-
+<section class="fact">
   <div class="content">
     <div class="container">
       <h2><%= fun_fact.fact_title %></h2>
       <h1><%= fun_fact.fact %></h1>
     </div>
   </div>
+</section>
