--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -54,6 +54,11 @@ select, input{
 	font-size: 1.5em;
 }
 
+input[type="file"]{
+	font-size: 1em;
+	vertical-align: middle;
+}
+
 
 .btn{
 	font-size: 1.2em;
