Fixed text on add fun fact buttons

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -19,7 +19,7 @@
 			<%= form_for [@city, @new_fact] do |f| %>
 				<%= render '/fun_facts/fields', f: f %>
 				<div class="submit">
-					<%= f.submit "Create city", class: "btn" %>
+					<%= f.submit "Add fun fact", class: "btn" %>
 				</div>
 			<% end %>
 		</div>
